--- a/src/prueba/Admin.form
+++ b/src/prueba/Admin.form
@@ -25,6 +25,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cap&#xed;tulo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
